--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
   --shadow-sm: 0 1px 2px 0 rgb(55 97 103 / 0.05);
   --shadow-md: 0 4px 6px -1px rgb(55 97 103 / 0.1), 0 2px 4px -2px rgb(55 97 103 / 0.1);
 
-  font-family: 'Outfit', sans-serif;
+  font-family: 'Nunito', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
